Overflow bugs fixed

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -9,6 +9,8 @@ body{
     font-family:'Courier New', Courier, monospace;
     font-size: 22px;
     font-weight: 600;
+    max-width: 100vw;
+
 }
 /*********************************navbar styles*******************************************/
 .phone{
@@ -25,6 +27,8 @@ body{
   padding:0 100px;
   align-items: center;
   justify-content: space-evenly;
+  overflow: hidden;
+
 }
 .menu-bar h1{
     font-size: 50px;
@@ -132,10 +136,11 @@ hr{
     padding:120px 200px;
     display: flex;
     align-items: center;
-    background: linear-gradient(130deg, #4831d4 67%, #ccf381 33%);
     background-image: url(images/bacground1.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
+
 }
 .one-container{
     color: white;
@@ -168,6 +173,8 @@ hr{
 /**************************section two**********************/
 .section-two{
     margin: 120px 200px;
+    overflow: hidden;
+
 }
 .section-two h2{
     width: 100%;
@@ -175,6 +182,7 @@ hr{
     color: rgb(69, 164, 170); 
     font-size: 70px;
     font-weight: bold;
+
 }
 .section-two .container{
     display: flex;
@@ -224,6 +232,8 @@ hr{
     width: 100%;
     background-color: rgb(69, 164, 170);
     margin-top: -30px;
+    overflow: hidden;
+
 }
 .item{
     padding: 80px  0px 130px 0 ;
@@ -251,6 +261,7 @@ hr{
 }
 .container{
     width: 90%;
+    margin:auto;
 }
 .carousel-caption{
     color:white
@@ -258,6 +269,7 @@ hr{
 .cv{
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
 .cv img{
     width: 75vw;
@@ -270,6 +282,7 @@ hr{
     text-align: center;
     width: 100%;
     height: 90px;
+    overflow: hidden;
 }
 /******************************media queries*******************************************/
 @media only screen and (max-width:  950px) { 
